# LaserSkeletonsR01

./: .gitignore  ARGP Experiment Schema.md  LaserSkeletonsR01.tex  README.md  _main_LaserSkeletonsR01.tex  gitignore  header.tex  main_LaserSkeletonsR01.tex  protection_of_human_subjects.tex  pyproject.toml  significance.tex
.github/workflows/: build_latex_document.yml  writerside-docs-deploy.yml
Writerside/: lsr.tree  lsr0.tree  redirection-rules.xml  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/images/: outdoor_mocap_rig
Writerside/topics/: ARGP Experiment 2 - Add distractors.md  Aim 1 - Real-world Recordings.md  Approach-Aim-1.md  Approach-Aim-2.md  Approach-Aim-3.md  Approach.md  Augmented Reality Ground Plane (ARGP).md  Behavioral Performance Kernels across Data Time Scales.md  Body Related Analyses.md  Data Time Scales.md  Data types.md  Descriptive Statistics.md  Domain-Specific-Empirical-Methods.md  General Strategy.md  General-Methods.md  General-Strategy.md  Inertia.md  Innovation.md  Laser Skeletons.md  Look ahead distance vs time.md  MAIN-DOCUMENT.md  Massed Data.md  NOTES.md  Outdoor Rig.md  Research-Strategy.md  (+31 more)
bibliography/: bibliography.bib  main_bibliography.tex
boilerplate/: inclusion_of_women_and_minorities.tex  main_boilerplate.tex  protection_of_human_subjects.tex
code/: auto_document.py  document_summary.md  load_point_cloud_data.py  remove_spaces_from_filenames.py
notes/: 2023-09-13_skellylasers_r01_gdoc_to_md_via_pandoc.md  meeting_notes.md  research-questions.md
research_strategy/: main_research_strategy.tex
(+77 files in other folders)
