[tool.poetry]
name = "laserskeletonsr01"
version = "0.1.0"
description = ""
authors = ["Jon Matthis <jonmatthis@gmail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.13"
magic-tree = {git = "https://github.com/jonmatthis/magic_tree.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
